feat: added new configs 'sql_bulk_insert_limit' and 'replace_durable'
Former-commit-id: 5c29313351b3285bd5056a6144e009797aeb0278