@@ -16,6 +16,7 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -24,6 +25,7 @@ import java.util.stream.Collectors;
 import static berlin.yuna.clu.logic.SystemUtil.getOsType;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.util.Arrays.stream;
+import static java.util.Objects.requireNonNull;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -52,7 +54,7 @@ class NatsServerConfigComponentTest {
         Set<String> missingConfigInJava = getNotMatchingEntities(consoleConfigKeys, javaConfigKeys);
 
         Set<String> missingConfigInConsole = getNotMatchingEntities(javaConfigKeys, consoleConfigKeys);
-        assertThat("Missing config in java", missingConfigInJava, is(empty()));
+        assertThat("Missing config in java \n" + console.toString(), missingConfigInJava, is(empty()));
         assertThat("Config was removed by nats", missingConfigInConsole, is(empty()));
     }
 
@@ -77,9 +79,9 @@ class NatsServerConfigComponentTest {
         final String json = new String(con.getInputStream().readAllBytes(), UTF_8);
         final Matcher matcher = Pattern.compile("\"tag_name\":\"(?<version>.*?)\"").matcher(json);
         if (matcher.find()) {
-            String content = Files.readString(configPath);
+            String content = Files.readString(requireNonNull(configPath));
             content = content.replaceAll("DEFAULT_VERSION.*=.*", "DEFAULT_VERSION = \"" + matcher.group("version") + "\";");
-            Files.write(configPath, content.getBytes(UTF_8));
+            Files.writeString(configPath, content);
         } else {
             throw new  IllegalStateException("Could not update nats server version");
         }
